--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,13 +6,12 @@
      <title>夏時紀錄-{{ $ggg }}</title>
 </head>
     <body>
-      <div style="margin:10px" class="md:flex justify-center">
+      <div style="margin-left:50px" class="md:flex justify-center">
          <!-- {{ partial "home_title" (dict "title" "文章列表: #") }} -->
          {{ partial "list_title" (dict "title" $ggg) }}
       </div>
       <div
-          class="mt-8 grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
-          style="margin: 20px"
+          class="mt-8 mx-14 grid grid-flow-row grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
       >
       {{ range .Pages }}
           <div class="hover:bg-gray-300 hover:shadow-2xl transition duration-200 w-full rounded overflow-hidden shadow-lg">
@@ -20,15 +19,18 @@
                   {{if .Params.image}}
                   <div class="transform hover:scale-110 transition duration-200">
                   <img
-                    class="w-full h-48"
-                      src="{{.Params.image}}"
+                    class="w-full"
+                    style="aspect-ratio: 1/0.65; object-fit: cover;"
+                    src="{{.Params.image}}"
+                    loading="lazy"
                   />
                  </div>
                   {{else}}
-                  <img
-                      class="w-full h-48"
+                  <!-- <img
+                      class="w-full"
+                      style="aspect-ratio: 1/0.65; object-fit: cover;"
                       src="https://picsum.photos/550/501"
-                  />
+                  /> -->
                   {{end}}
                 </a>
                 <div class="px-6 py-4">
