--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,9 +6,10 @@
 <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/GridPractice.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/figmacss.css" />
 
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="img/favicon.ico" />
 <link rel="apple-touch-icon" href="img/favicon.ico" />
 <link rel="bookmark" href="img/favicon.ico"/>
+<link rel="icon" href="img/favicon.ico"/>
 
 <link href="https://unpkg.com/tailwindcss@^2.0/dist/tailwind.min.css" rel="stylesheet">
 <!--上面那一行只是快速演示Tailwind的功能-->
