--- a/layouts/partials/About.html
+++ b/layouts/partials/About.html
@@ -3,7 +3,7 @@
   <div class="md:flex justify-around">
     {{ partial "home_title" (dict "title" "關於我們") }}
   </div>
-  <div class="md:flex justify-around">
+  <div style="display:flex; justify-content: space-evenly;">
       <!--以下是陳宥任-->
       <figure class="bg-white rounded-xl p-8">
         <!--插入圖片連結-->
@@ -31,6 +31,8 @@
           </figcaption>
         </div>
       </figure>
+
+
       <!--以下是修方良 可用 bg-gray-100來修正-->
       <figure class="bg-white rounded-xl p-8">
         <img class="w-32 h-32 rounded-full mx-auto" src="/img/FrankP2.jpg" alt="" width="384" height="512">
