--- a/layouts/partials/UIdesign0.html
+++ b/layouts/partials/UIdesign0.html
@@ -16,10 +16,10 @@
                 </div>
             </figure>   -->
 
-            <div class="bg-white rounded-xl p-4">
+            <div class="bg-white rounded-xl p-4" style="display: flex;align-items: center;flex-direction: row;justify-content: flex-start;">
                 
                 <img style="float: left; margin-right: 10px;" class="w-32 h-32 rounded-full mx-auto" src="/img/TonyP3.jpg" alt="" width="384" height="512">
-                <p style="height: 170px;" class="text-base font-semibold">
+                <p class="text-base font-semibold">
                     “
                     我是Tony，是一名小小的醫學生。某天哪根筋不對，突然開始研究程式，不知不覺完成了這個網站，於是和Frank相邀開始了寫文章的怪生活
                     ”
@@ -27,14 +27,14 @@
               
             </div>
             <!--以下是修方良-->
-            <div class="bg-white rounded-xl p-4">
+            <div class="bg-white rounded-xl p-4" style="display: flex;align-items: center;flex-direction: row;justify-content: flex-start;">
                 
-                <img style="float: right; margin-left: 10px;" class="w-32 h-32 rounded-full mx-auto" src="/img/FrankP2.jpg" alt="" width="384" height="512">
-                <p style="height: 100px;" class="text-base font-semibold">
+                <p class="text-base font-semibold">
                     “
                     我是Frank，喜歡研究西方哲學和國學，然後選擇工科學校就讀。矛盾嗎？反正活著的矛盾遠比這種小事大，在乎又有何用?
                     ”
                 </p>
+                <img style="float: right; margin-left: 10px;" class="w-32 h-32 rounded-full mx-auto" src="/img/FrankP2.jpg" alt="" width="384" height="512">
                   
             </div>
     </section> 
