--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -4,7 +4,7 @@ nav {
   left: 0;
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   transition: 0.6s;
   padding: 40px 100px;
@@ -13,12 +13,15 @@ nav {
 }
 
 nav.onscroll {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 5px 100px;
   background: rgba(0, 0, 0, 0.5);
 }
 
 nav .logo {
-  /*display: none;*/
+  display: none;
   position: relative;
   font-weight: 700;
   color: #fff;
@@ -26,6 +29,7 @@ nav .logo {
   font-size: 5.25vmin;
   text-transform: uppercase;
   letter-spacing: 2px;
+  /* transition: opacity 3s ease; 添加过渡属性和持续时间 */
 }
 
 nav ul {
@@ -51,7 +55,8 @@ nav ul li a {
 }
 
 nav.onscroll .logo{
-  /*display: block;*/
+  
+  display: block;
 }
 nav.onscroll ul li a {
   color: #fff;
