--- a/layouts/partials/UIdesign2.html
+++ b/layouts/partials/UIdesign2.html
@@ -33,8 +33,12 @@
                         {{end}}
                     </div>
                     <div id="ContentCard-title"><a href="{{.Permalink}}">{{ .Title }}</a></div>
-                    <div id="ContentCard-textoverflow"><p>{{ truncate 200 .Summary}}</p></div>
-               
+                    <!-- <div id="ContentCard-textoverflow"><p>{{ truncate 200 .Summary}}</p></div> -->
+                    <div id="ContentCard-textoverflow"><p>
+                        {{ $summary := .Summary | plainify | truncate 200 }} 
+                        {{ $content := replaceRE "(?s)<img[^>]*>(.*)" "" $summary }} 
+                        {{ $content }}
+                    </p></div>
             </div>
             {{end}}
         </div>
