--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,7 +25,7 @@
              {{end}}
 <!-- hitwebcounter Code END -->
         <div style="width: 80%; max-width: 750px; margin: 4rem auto;">
-            {{ partial "disqus.html" . }}
+            {{ partial "disqus.html" }}
         </div>
     </body>
 </html>
